--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 
 <body>
-
+    <div id="quiz"></div>
+    <button id="submit">Submit Quiz</button>
+    <div id="results"></div>
 
 </body>
 </html>
