--- a/index.html
+++ b/index.html
@@ -9,12 +9,22 @@
         integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css" /> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- <script src="assets/javascript/game.js"></script> -->
+    <script src="assets/javascript/app.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 </head>
 
 <body>
-    <div id="quiz"></div>
+    <div id="firstscreen">
+        <div class="box">
+            <h3>Welcome to</h3>
+            <h3>Tennis Trivia</h3>
+            <hr/>
+            <p>You have 20 seconds to guess 4 questions.</p>
+            <br/>
+            <p>Click to Start</p>
+            <button type="button" id="start-button">START</button>
+        </div>
+    </div>
     <button id="submit">Submit Quiz</button>
     <div id="results"></div>
 
