--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Crystals Collector Game</title>
+    <title>Trivia Game</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
         integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -18,9 +18,9 @@
         <div class="box">
             <h3>Welcome to</h3>
             <h3>Tennis Trivia</h3>
-            <hr/>
+            <hr />
             <p>You have 20 seconds to guess 4 questions.</p>
-            <br/>
+            <br />
             <p>Click to Start</p>
             <button type="button" id="start-button">START</button>
         </div>
@@ -29,4 +29,5 @@
     <div id="results"></div>
 
 </body>
+
 </html>
