building display questions function

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div id="firstscreen">
+    <div id="firstscreen" class="container">
         <div class="box">
             <h3>Welcome to</h3>
             <h3>Tennis Trivia</h3>
@@ -24,9 +24,13 @@
             <p>Click to Start</p>
             <button type="button" id="start-button">START</button>
         </div>
+        <br />
+        <div class="questions">
+            <button id="submit">Submit Quiz</button>
+
+        </div>
+        <div id="results"></div>
     </div>
-    <button id="submit">Submit Quiz</button>
-    <div id="results"></div>
 
 </body>
 
