--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css" /> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="assets/javascript/app.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 </head>
 
@@ -21,17 +20,14 @@
             <hr />
             <p>You have 20 seconds to guess 4 questions.</p>
             <br />
-            <p>Click to Start</p>
-            <button type="button" id="start-button">START</button>
         </div>
         <br />
-        <div class="questions">
-            <button id="submit">Submit Quiz</button>
-
-        </div>
+        <div id="quiz"></div>
+        <button id="submit">Submit Quiz</button>
         <div id="results"></div>
     </div>
-
+    
 </body>
+<script src="assets/javascript/app.js"></script>
 
 </html>
