tried to make a crappy count down timer

--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
             <hr />
             <p>You have 20 seconds to guess 4 questions.</p>
             <br />
+            <div id="countdown">20</div>
         </div>
         <br />
         <div id="quiz"></div>
         <button id="submit">Submit Quiz</button>
+        <button id="start">Start Quiz</button>
         <div id="results"></div>
     </div>
     
